# news-scraper

./: .gitignore  README.md  energy_pulse.db  fix_graph.patch  main.py  pyproject.toml  render.yaml  replace_logs.py  requirements.txt
archive/: main.py
backend/: Dockerfile  alembic.ini  deploy-requirements.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0fcd29ee36ba_enable_rls_on_all_tables.py  45b017037299_add_time_filter_to_topics.py  dd2bac3a0c2e_init_postgres.py  ed98bba9872a_many_to_many_topics.py
backend/app/: __init__.py  config.py  database.py  logger.py  main.py  models.py  schemas.py
backend/app/analysis/: classifier.py  embeddings.py
backend/app/api/: articles.py  chat.py  graph.py  oil_price.py  progress.py  topics.py
backend/app/scraper/: crawler.py  sources.py
backend/app/services/: oil_price.py  scheduler.py
backend/data/: evaluation_dataset.json
backend/scripts/: evaluate_classifier.py
backend/tests/: conftest.py  test_api.py  test_classifier.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ArticleFeed.css  ArticleFeed.jsx  ArticlePanel.css  ArticlePanel.jsx  ChatAssistant.css  ChatAssistant.jsx  Header.css  Header.jsx  NewsGraph3D.css  NewsGraph3D.jsx  OilPriceWidget.css  OilPriceWidget.jsx  TopicManager.css  TopicManager.jsx  WorldMap.css  WorldMap.jsx
frontend/src/hooks/: useArticles.js  (+1 more)
scraper/: __init__.py  analyzer.py  config.py  fetcher.py  oil_price.py  storage.py
(+1 files in other folders)
