[project]
name = "news-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.4.0",
    "google-generativeai>=0.8.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "schedule>=1.2.2",
    "yfinance>=1.3.0",
]
