[project]
name = "news-scraper"
version = "0.1.0"
description = "Automated Russia-Ukraine war news scraper with AI-powered oil market impact analysis and live Brent Crude dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "google-genai>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "schedule>=1.2.2",
    "trafilatura>=2.1.0",
    "yfinance>=1.3.0",
]
